--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="twitter:title" content="Welcome to my website.Enjoy it">
+    <meta name="twitter:description" content="Drink Cambodia">
     <title>ThanyShop</title>
     <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSCB7gvwK6FKs-Vf4mbyRK1c6dCV96Ne4I5SiNdWZ1vx1sk1RLpELJFILKwv3iQTbrpxxE&usqp=CAU">
 
